# CMakeProject

./: CMakeLists.txt  main.cpp
cmakeconf/: building_out.cmake
include/: Gun.h  Soldier.h  swap.h
samples/: CMakeLists.txt
samples/dynlib/: CMakeLists.txt  dynlib.cpp  dynlib.h  test.cpp
samples/helloworld/: CMakeLists.txt  helloworld.cpp
samples/slib/: CMakeLists.txt  slib.cpp  slib.h
src/: Gun.cpp  Soldier.cpp  swap.cpp
